# zephyr

./: .gitmodules  PDM
boards/arm/b_u585i_iot02a/: b_u585i_iot02a-common.dtsi  b_u585i_iot02a.dts
boards/arm/stm32wb5mm_dk/: stm32wb5mm_dk.dts  stm32wb5mm_dk.yaml  stm32wb5mm_dk_defconfig
boards/others/stm32_min_dev/: stm32_min_dev_stm32f103xb_blue_weact.overlay
boards/st/stm32f103_mini/: Kconfig.stm32f103_mini  board.cmake  board.yml  stm32f103_mini.dts  stm32f103_mini.yaml
boards/st/stm32wb5mm_dk/: stm32wb5mm_dk.dts
boards/weact/bluepill_stm32f103c8t6/: bluepill_stm32f103c8t6_defconfig
drivers/audio/: Kconfig.mpxxdtyy
drivers/led/: CMakeLists.txt  Kconfig  Kconfig.tlc59731  tlc59731.c
drivers/led_strip/: CMakeLists.txt  Kconfig.tlc59731  tlc59731_spi.c
drivers/modem/: CMakeLists.txt  Kconfig  nrf24l01.c
drivers/sensor/stts22h/: CMakeLists.txt  Kconfig  stts22h.c  stts22h.h  stts22h_i2c.c  stts22h_trigger.c
dts/bindings/clock/: st,stm32wb-pllsai-clock.yaml
dts/bindings/led/: ti,tlc59731.yaml
dts/bindings/led_strip/: ti,tlc59731-spi.yaml
dts/bindings/sensor/: st,stts22h-i2c.yaml
samples/basic/rgb_blink/: .vscode-ctags  prj.conf
samples/drivers/audio/st_dmic/: .vscode-ctags  CMakeLists.txt  Kconfig  Kconfig.sai  prj.conf
samples/drivers/audio/st_dmic/src/: main.c  stm32wb5mm_dk_audio.c  stm32wb5mm_dk_audio.h  stm32wb5mm_dk_conf.h
samples/drivers/led_tlc59731/: README.rst  sample.yaml
samples/sensor/st_stts22h/: prj.conf  sample.yaml
samples/sensor/veml6030/: CMakeLists.txt  (+1 more)
workspace/hvac/: CMakeLists.txt  prj.conf  sample.yaml
(+22 files in other folders)
